--- a/CovGI/www/templates/inside.html
+++ b/CovGI/www/templates/inside.html
@@ -35,8 +35,8 @@
                                         </a>
                          </div>
 
-                        <ion-footer-bar class="bar bar-footer" style=" padding-top: inherit;">
-                            <button title="Create offer" class="button button-block button-dark" >Create Offer</button>
+                        <ion-footer-bar class="bar bar-footer" >
+                            <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;" >Creer une offre</a>
                         </ion-footer-bar>
                     </ion-content>
                 </ion-view>
@@ -72,7 +72,7 @@
                     </ion-content>
                     <ion-footer-bar class="bar bar-footer">
                         <!--<button title="Create Demand"  class="button button-block button-dark">Create Demand</button>-->
-                        <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" >Create Demand</a>
+                        <a class="button  icon-right ion-chevron-right button-dark" style="width: 100%" href="#/menu/createOffer" >Creer une demande</a>
                     </ion-footer-bar>
                 </ion-view>
             </ion-tab>
