--- a/CovGI/www/templates/tab-dash.html
+++ b/CovGI/www/templates/tab-dash.html
@@ -11,8 +11,11 @@
 				<span class="input-label">Password</span>
 				<input type="password" name="password" ng-model="user.password">
 			</label>
-			<button class="button button-block button-balanced" ng-click="login()">Login</button>
+			<button class="button button-block button-dark" ng-click="login()">Login</button>
     	</div>
-	  <div id="map"></div>
+
+
+
   </ion-content>
 </ion-view>
+
