--- a/CovGI/www/css/style.css
+++ b/CovGI/www/css/style.css
@@ -6,6 +6,12 @@
 }
 
 #map {
+
+    height: 55%;
+    width: 100%;
+}
+
+.scroll {
     height: 100%;
 }
 #floating-panel {
@@ -20,4 +26,10 @@
     font-family: 'Roboto','sans-serif';
     line-height: 30px;
     padding-left: 10px;
+}
+
+#mymap {
+
+    height: 60%;
+    width: 100%;
 }
