--- a/CovGI/www/templates/tabs.html
+++ b/CovGI/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-assertive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-assertive">
+<ion-tabs class="tabs-icon-top tabs-color-active-dark tabs-stable">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Home" icon-off="ion-android-home" icon-on="ion-android-home" href="#/tab/dash">
