--- a/CovGI/www/templates/create_demand.html
+++ b/CovGI/www/templates/create_demand.html
@@ -1,40 +1,60 @@
-
-<script>
-    function initMap() {
-        var directionsService = new google.maps.DirectionsService;
-        var directionsDisplay = new google.maps.DirectionsRenderer;
-        var map = new google.maps.Map(document.getElementById('mymap'), {
-            zoom: 7,
-            center: {lat: 41.85, lng: -87.65}
-        });
-        directionsDisplay.setMap(map);
-
-        var onChangeHandler = function() {
-            calculateAndDisplayRoute(directionsService, directionsDisplay);
-        };
-        document.getElementById('start').addEventListener('change', onChangeHandler);
-        document.getElementById('end').addEventListener('change', onChangeHandler);
-    }
-
-    function calculateAndDisplayRoute(directionsService, directionsDisplay) {
-        directionsService.route({
-            origin: document.getElementById('start').value,
-            destination: document.getElementById('end').value,
-            travelMode: google.maps.TravelMode.DRIVING
-        }, function(response, status) {
-            if (status === google.maps.DirectionsStatus.OK) {
-                directionsDisplay.setDirections(response);
-            } else {
-                window.alert('Directions request failed due to ' + status);
-            }
-        });
-    }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAX2wZ8i9JKyONp9r5rJL1BEGkwRQiJPN8&signed_in=true&callback=initMap"
-        async defer></script>
 <ion-view title="Create Demand">
     <ion-content>
         <div id="mymap"></div>
+        <div id="right-panel">
+            <p>Total Distance: <span id="total"></span></p>
+        </div>
+        <script>
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('mymap'), {
+                    zoom: 4,
+                    center: {lat: -24.345, lng: 134.46}  // Australia.
+                });
+
+                var directionsService = new google.maps.DirectionsService;
+                var directionsDisplay = new google.maps.DirectionsRenderer({
+                    draggable: true,
+                    map: map,
+                    panel: document.getElementById('right-panel')
+                });
+
+                directionsDisplay.addListener('directions_changed', function() {
+                    computeTotalDistance(directionsDisplay.getDirections());
+                });
+
+                displayRoute('Perth, WA', 'Sydney, NSW', directionsService,
+                    directionsDisplay);
+            }
+
+            function displayRoute(origin, destination, service, display) {
+                service.route({
+                    origin: origin,
+                    destination: destination,
+                    waypoints: [{location: 'Adelaide, SA'}, {location: 'Broken Hill, NSW'}],
+                    travelMode: 'DRIVING',
+                    avoidTolls: true
+                }, function(response, status) {
+                    if (status === 'OK') {
+                        display.setDirections(response);
+                    } else {
+                        alert('Could not display directions due to: ' + status);
+                    }
+                });
+            }
+
+            function computeTotalDistance(result) {
+                var total = 0;
+                var myroute = result.routes[0];
+                for (var i = 0; i < myroute.legs.length; i++) {
+                    total += myroute.legs[i].distance.value;
+                }
+                total = total / 1000;
+                document.getElementById('total').innerHTML = total + ' km';
+            }
+        </script>
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPXPCJ4B_xKWuHxLimyt-LqTXhcGFl69M&callback=initMap">
+        </script>
         <div class="list">
             <b>Start: </b>
                 <input type="text" id="start">
