--- a/CovGI/www/templates/member_offer.html
+++ b/CovGI/www/templates/member_offer.html
@@ -1,5 +1,5 @@
 <ion-view title="Mes Offres">
-    <ion-content>
+    <ion-content ng-controller="memberOfferCtrl">
         <div class="buttons">
             <button class="button  button-icon icon ion-ios-minus-outline"
                     ng-click="data.showDelete = !data.showDelete; data.showReorder = false"></button>
