--- a/CovGI/www/templates/create_demand.html
+++ b/CovGI/www/templates/create_demand.html
@@ -1,65 +1,34 @@
 <ion-view title="Create Demand">
-    <ion-content>
-        <div id="mymap"></div>
-        <div id="right-panel">
-            <p>Total Distance: <span id="total"></span></p>
+    <ion-content ng-controller="createDemandCtrl">
+        <div id="map"> </div>
+        <div ng-controller="StaticCtrl">
+            <h3 class="title">Choisir le trajet</h3>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Ville:
+                    <select id="country" ng-model="cities" ng-options="country for (country, cities) in countries">
+                        <option value=''>Select</option>
+                    </select>
+                </div>
+            </label>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Quartier: <select id="city" ng-disabled="!cities" ng-model="suburbs" ng-options="city for (city, suburbs) in cities"><option value=''>Select</option></select>
+                </div>
+            </label>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Lieu: <select  id="suburb" ng-disabled="!suburbs" ng-model="suburb" ng-options="suburb for suburb in suburbs"><option value=''>Select</option></select>
+                </div>
+            </label>
+
         </div>
-        <script>
-            function initMap() {
-                var map = new google.maps.Map(document.getElementById('mymap'), {
-                    zoom: 4,
-                    center: {lat: -24.345, lng: 134.46}  // Australia.
-                });
-
-                var directionsService = new google.maps.DirectionsService;
-                var directionsDisplay = new google.maps.DirectionsRenderer({
-                    draggable: true,
-                    map: map,
-                    panel: document.getElementById('right-panel')
-                });
-
-                directionsDisplay.addListener('directions_changed', function() {
-                    computeTotalDistance(directionsDisplay.getDirections());
-                });
-
-                displayRoute('Perth, WA', 'Sydney, NSW', directionsService,
-                    directionsDisplay);
-            }
-
-            function displayRoute(origin, destination, service, display) {
-                service.route({
-                    origin: origin,
-                    destination: destination,
-                    waypoints: [{location: 'Adelaide, SA'}, {location: 'Broken Hill, NSW'}],
-                    travelMode: 'DRIVING',
-                    avoidTolls: true
-                }, function(response, status) {
-                    if (status === 'OK') {
-                        display.setDirections(response);
-                    } else {
-                        alert('Could not display directions due to: ' + status);
-                    }
-                });
-            }
-
-            function computeTotalDistance(result) {
-                var total = 0;
-                var myroute = result.routes[0];
-                for (var i = 0; i < myroute.legs.length; i++) {
-                    total += myroute.legs[i].distance.value;
-                }
-                total = total / 1000;
-                document.getElementById('total').innerHTML = total + ' km';
-            }
-        </script>
-        <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPXPCJ4B_xKWuHxLimyt-LqTXhcGFl69M&callback=initMap">
-        </script>
-        <div class="list">
-            <b>Start: </b>
-                <input type="text" id="start">
-            <b>End: </b>
-                <input type="text" id="end">
+        <div class="list" >
+            <label class="item item-input">
+                <span class="input-label">Date de deppart</span>
+                <input type="datetime-local" ng-model="datetimeDemande">
+            </label>
+            <button class="button button-block button-calm" ng-click="logInfoTrajet()">Ajouter cette Demande</button>
         </div>
     </ion-content>
 </ion-view>
