--- a/CovGI/www/templates/create_offer.html
+++ b/CovGI/www/templates/create_offer.html
@@ -27,14 +27,15 @@
         <div class="list" >
             <label class="item item-input">
                 <span class="input-label">Place disponible</span>
-                <input type="number">
+                <input type="number" max="10" min="1">
             </label>
             <label class="item item-input">
                 <span class="input-label">Date de deppart</span>
                 <input type="datetime-local">
             </label>
-            <button class="button button-block button-calm">Ajouter cette Offre</button>
+            <button class="button button-block button-calm" ng-click="saveTraject()">Ajouter cette Offre</button>
         </div>
+
     </ion-content>
 </ion-view>
 
