--- a/CovGI/www/templates/create_offer.html
+++ b/CovGI/www/templates/create_offer.html
@@ -27,13 +27,13 @@
         <div class="list" >
             <label class="item item-input">
                 <span class="input-label">Place disponible</span>
-                <input type="number" max="10" min="1">
+                <input type="number" max="10" min="1" ng-model="placeDispo">
             </label>
             <label class="item item-input">
                 <span class="input-label">Date de deppart</span>
-                <input type="datetime-local">
+                <input type="datetime-local" ng-model="dateTrajet">
             </label>
-            <button class="button button-block button-calm" ng-click="saveTraject()">Ajouter cette Offre</button>
+            <button class="button button-block button-calm" ng-click="test()">Ajouter cette Offre</button>
         </div>
 
     </ion-content>
