--- a/CovGI/www/templates/create_offer.html
+++ b/CovGI/www/templates/create_offer.html
@@ -33,7 +33,7 @@
                 <span class="input-label">Date de deppart</span>
                 <input type="datetime-local" ng-model="dateTrajet">
             </label>
-            <button class="button button-block button-calm" ng-click="test()">Ajouter cette Offre</button>
+            <button class="button button-block button-calm" ng-click="addOffer()">Ajouter cette Offre</button>
         </div>
 
     </ion-content>
