--- a/CovGI/www/templates/create_offer.html
+++ b/CovGI/www/templates/create_offer.html
@@ -1,12 +1,12 @@
-<ion-view title="Creer une offre" >
+<ion-view title="Créer une offre" >
     <ion-content ng-controller="MapsCtrl">
         <div id="map"> </div>
 
         <div ng-controller="StaticCtrl">
-            <h3 class="title">Choisir le trajet</h3>
+            <h3 class="title">&nbsp;Choisir le trajet</h3>
             <label class="item item-input item-select">
                 <div class="input-label">
-                    Ville:
+                    <i class="icon ion-ios-flag"></i>&nbsp;     Ville
                     <select id="country" ng-model="cities" ng-options="country for (country, cities) in countries">
                         <option value=''>Select</option>
                     </select>
@@ -14,26 +14,27 @@
             </label>
             <label class="item item-input item-select">
                 <div class="input-label">
-                    Quartier: <select id="city" ng-disabled="!cities" ng-model="suburbs" ng-options="city for (city, suburbs) in cities"><option value=''>Select</option></select>
+                    <i class="icon ion-ios-flag"></i>&nbsp;   Quartier <select id="city" ng-disabled="!cities" ng-model="suburbs" ng-options="city for (city, suburbs) in cities"><option value=''>Select</option></select>
                 </div>
             </label>
             <label class="item item-input item-select">
                 <div class="input-label">
-                    Lieu: <select id="suburb" ng-disabled="!suburbs" ng-model="suburb" ng-options="suburb for suburb in suburbs"><option value=''>Select</option></select>
+                    <i class="icon ion-ios-flag"></i>&nbsp; Lieu <select id="suburb" ng-disabled="!suburbs" ng-model="suburb" ng-options="suburb for suburb in suburbs"><option value=''>Select</option></select>
                 </div>
             </label>
+
 
         </div>
         <div class="list" >
             <label class="item item-input">
-                <span class="input-label">Place disponible</span>
-                <input type="number">
+                <span class="input-label"> <i class="icon ion-ios-people"></i>&nbsp;Nombre de passagers</span>
+                <input type="number" max="10" min="1" ng-model="placeDispo">
             </label>
             <label class="item item-input">
-                <span class="input-label">Date de deppart</span>
-                <input type="datetime-local">
+                <span class="input-label"><i class="icon ion-android-calendar"></i>&nbsp;Date de départ</span>
+                <input type="datetime-local" ng-model="dateTrajet">
             </label>
-            <button class="button button-block button-calm">Ajouter cette Offre</button>
+            <button class="button button-block button-calm" ng-click="addOffer()">Ajouter</button>
         </div>
     </ion-content>
 </ion-view>
