--- a/CovGI/www/templates/member_offer.html
+++ b/CovGI/www/templates/member_offer.html
@@ -1,31 +1,21 @@
 <ion-view title="Mes Offres">
+
     <ion-content ng-controller="memberOfferCtrl">
         <div class="buttons">
             <button class="button  button-icon icon ion-ios-minus-outline"
-                    ng-click="data.showDelete = !data.showDelete; data.showReorder = false"></button>
+                    ng-click="onShowDeleteIcons()"></button>
         </div>
 
-          <div class="list" class="item-remove-animate">
+    <div class="list" class="item-remove-animate">
 
-        <a class="item item-icon-left" href="#">
+        <a class="item item-icon-left" href="#" ng-repeat="trajectUser in trajetsUser">
             <i class="icon ion-arrow-right-b"></i>
-            Offre 1
+            {{trajectUser.lieu}} </br>
+            {{trajectUser.dateTrajet}}</br>
+            {{trajectUser.nombrePlace}}
         </a>
 
-        <a class="item item-icon-left" href="#">
-            <i class="icon ion-arrow-right-b"></i>
-            Offre 2
-        </a>
 
-        <a class="item item-icon-left" href="#">
-            <i class="icon ion-arrow-right-b"></i>
-            Offre 3
-        </a>
-
-        <a class="item item-icon-left" href="#">
-            <i class="icon ion-arrow-right-b"></i>
-            Offre 4
-        </a>
     </div>
 
     </ion-content>
