--- a/CovGI/www/templates/inside.html
+++ b/CovGI/www/templates/inside.html
@@ -10,11 +10,10 @@
 
                 <ion-view>
 
-                    <ion-content>
+                    <ion-content style="margin-top: -65px">
 
-                          <div class="list">
+                          <div class="list" >
 
-<<<<<<< HEAD
                         <a class="item item-icon-left" ng-repeat="offre in allOffer">
 
 
@@ -42,19 +41,6 @@
                     </div>
 
 
-=======
-                                        <a class="item item-icon-left" ng-repeat="offre in allOffer">
-                                            <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 40px; margin-top: 25px;"></img>
-                                            <p >Trajet:Technopolice - {{offre.lieu}}</p>
-                                            <p> Date: {{offre.dateTrajet}}</p>
-                                            <p> Nombre de place disponibile: {{offre.nombrePlace}}</p>
-                                        </a>
-                         </div>
-
-                        <ion-footer-bar class="bar bar-footer">
-                            <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;" >Creer une offre</a>
-                        </ion-footer-bar>
->>>>>>> 36560b133cd4d967d6e2f4fe709aefc2547fd3bd
                     </ion-content>
                     <ion-footer-bar class="bar bar-footer" >
                         <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;" >Créer une offre</a>
@@ -65,7 +51,7 @@
 
             <ion-tab title="Demande"  icon-off="ion-ios-list" icon-on="ion-ios-list">
                 <ion-view>
-                    <ion-content>
+                    <ion-content style="margin-top: -65px">
 
                           <div class="list">
 
