--- a/CovGI/www/templates/offre-tab.html
+++ b/CovGI/www/templates/offre-tab.html
@@ -1,30 +1,38 @@
-<ion-view >
+<ion-view>
 
-     <ion-content class="padding">
+    <ion-content style="margin-top: -65px">
 
-      <div class="list">
+          <div class="list" >
 
-    <a class="item item-icon-left" href="#">
-        <i class="icon ion-arrow-right-b"></i>
-        Offre 1
-    </a>
+        <a class="item item-icon-left" ng-repeat="offre in allOffer">
 
-    <a class="item item-icon-left" href="#">
-        <i class="icon ion-arrow-right-b"></i>
-        Offre 2
-    </a>
 
-    <a class="item item-icon-left" href="#">
-        <i class="icon ion-arrow-right-b"></i>
-        Offre 3
-    </a>
+            <div class="row">
+                <div class="col"> <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 30px; margin-top: 30px; margin-left: 15px;"></div>
+                <div class="col" style="margin-right: 150px"> <p>Technopolis </p>
+                    <p>{{offre.lieu}}</p></div>
+            </div>
 
-    <a class="item item-icon-left" href="#">
-        <i class="icon ion-arrow-right-b"></i>
-        Offre 4
-    </a>
+            <div class="row">
+                <div class="col"><i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 70px; margin-left: 15px;"></i></div>
+
+                <div class="col" style="margin-right: 150px"><p> Date: {{offre.dateTrajet}}</p></div>
+
+            </div>
+
+            <div class="row">
+                <div class="col"><i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i></div>
+                <div class="col" style="margin-right: 150px"><p> Nombre de places disponibles : {{offre.nombrePlace}}</p></div>
+            </div>
+
+        </a>
+
+
     </div>
 
-     </ion-content>
 
+    </ion-content>
+    <ion-footer-bar class="bar bar-footer" >
+        <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;" >Créer une offre</a>
+    </ion-footer-bar>
 </ion-view>
