--- a/CovGI/www/templates/sideMenu.html
+++ b/CovGI/www/templates/sideMenu.html
@@ -10,7 +10,7 @@
         </ion-side-menu-content>
         <ion-side-menu side="left">
             <ion-header-bar class="bar bar-header bar-dark">
-                <h1 class="title">Member Info</h1>
+                <h1 class="title">Menu</h1>
             </ion-header-bar>
             <ion-content has-header="true">
                 <!--<ion-list>
@@ -35,11 +35,10 @@
                     </div>
 
                     <ion-list>
-                        ion-plus-circled
                         <ion-item ng-click="check_offers()" menu-close=""><i class="icon ion-android-car placeholder-icon"></i>Mes Offres</ion-item>
                         <ion-item><i class="icon ion-android-car placeholder-icon"></i>Mes Demandes</ion-item>
-                        <ion-item ><i class="icon ion-plus-circled placeholder-icon"></i>Créer une offre</ion-item>
-                        <ion-item><i class="icon ion-plus-circled placeholder-icon"></i>Créer une demande</ion-item>
+                        <ion-item ng-click="createOffer()" menu-close=""  ><i class="icon ion-plus-circled placeholder-icon"></i>Créer une offre</ion-item>
+                        <ion-item ng-click="createDemand()" menu-close="" ><i class="icon ion-plus-circled placeholder-icon"></i>Créer une demande</ion-item>
                         <ion-item ng-click="logout()"><i class="icon ion-android-exit placeholder-icon"></i>Se déconnecter</ion-item>
                     </ion-list>
                 </div>
