--- a/CovGI/www/templates/inside.html
+++ b/CovGI/www/templates/inside.html
@@ -14,7 +14,7 @@
 
                           <div class="list" >
 
-                        <a class="item item-icon-left" ng-repeat="offre in allOffer">
+                        <a class="item item-icon-left" ng-repeat="offre in allOffer" ng-click="openModalOffer(offre)">
 
 
                             <div class="row">
