--- a/CovGI/www/templates/member_offer.html
+++ b/CovGI/www/templates/member_offer.html
@@ -1,12 +1,24 @@
 <ion-view title="Mes Offres">
+
     <ion-content ng-controller="memberOfferCtrl">
         <div class="buttons">
             <button class="button  button-icon icon ion-ios-minus-outline"
                     ng-click="showDelete = !showDelete"></button>
         </div>
         <ion-list show-delete="showDelete">
-            <ion-item ng-repeat="trajectUser in trajetsUser" class="list" class="item-icon-left item-button-right item-toggle item-icon-right">
-                <ion-delete-button class="ion-trash-b" ng-click="deleteItem(trajectUser)"></ion-delete-button>
+            <ion-item ng-repeat="trajectUser in trajetsUser" class="list" class="item-icon-left item-button-right item-toggle item-icon-right" >
+                <ion-delete-button class="ion-trash-b" ng-click="deleteItem(trajectUser)">
+                </ion-delete-button>
+                <ion-option-button class="button-assertive"
+                                   ng-click="deleteItem(trajectUser)">
+                    Supprimer
+                </ion-option-button>
+                <ion-option-button class="button-calm"
+                                   ng-click="edit(trajectUser)">
+                    Modifier
+                </ion-option-button>
+
+
 
                 <div class="row">
                     <div class="col"> <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 30px; margin-top: 7px; margin-left: 15px;"></div>
@@ -20,22 +32,17 @@
                     <div class="col" style="margin-right: 150px"><p> Date: {{trajectUser.dateTrajet}}</p></div>
 
                 </div>
-
                 <div class="row">
                     <div class="col"><i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i></div>
                     <div class="col" style="margin-right: 150px"><p> Nombre de places disponibles : {{trajectUser.nombrePlace}}</p></div>
                 </div>
 
-                <i ng-if="showDelete" style="right: 64px;"></i>
+
+
+                <i ng-if="showDelete" style="right: 64px;"></i>
             </ion-item>
-
-
-
         </ion-list>
+
+
     </ion-content>
-    <ion-footer-bar class="bar bar-footer" >
-        <a class="button  icon-right ion-chevron-right button-dark" ng-click="createOffer()" style="width: 100%;" >Créer une offre</a>
-    </ion-footer-bar>
 </ion-view>
-
-
