--- a/CovGI/www/templates/create_demand.html
+++ b/CovGI/www/templates/create_demand.html
@@ -1,5 +1,5 @@
 <ion-view title="Créer une demande">
-    <ion-content ng-controller="MapsCtrl">
+    <ion-content ng-controller="MapsCtrl" data-ng-init="init()">
         <div id="map"> </div>
         <div ng-controller="StaticCtrl">
             <h3 class="title">&nbsp;Choisir le trajet</h3>
