--- a/CovGI/www/templates/sideMenu.html
+++ b/CovGI/www/templates/sideMenu.html
@@ -21,7 +21,7 @@
 
 
                         <div class="item item-avatar" >
-                            <img  src="..\img\imane.PNG">
+                            <img  src="..\img\bel_med_amine.jpg">
                         </div>
                         <span style="font-weight: bold;">{{member_info.login}}</span> <br>
                         {{member_info.email}}  <br>
