--- a/CovGI/www/templates/create_offer.html
+++ b/CovGI/www/templates/create_offer.html
@@ -1,5 +1,6 @@
-<ion-view title="Créer une offre" >
-    <ion-content ng-controller="MapsCtrl">
+
+<ion-view title="Créer une offre">
+    <ion-content ng-controller="MapsCtrl" data-ng-init="init()">
         <div id="map"> </div>
 
         <div ng-controller="StaticCtrl">
