Add button create offer

--- a/CovGI/www/templates/member_offer.html
+++ b/CovGI/www/templates/member_offer.html
@@ -45,4 +45,7 @@
 
 
     </ion-content>
+    <ion-footer-bar class="bar bar-footer" >
+        <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;"  >Créer une offre</a>
+    </ion-footer-bar>
 </ion-view>
