add marker to modal

--- a/CovGI/www/templates/modal.html
+++ b/CovGI/www/templates/modal.html
@@ -4,7 +4,7 @@
     </ion-header-bar>
     <ion-content ng-controller="modalCrtl">
         <div onload="initMap()" id="map"></div>
-
+        <div id="current"></div>
         <div class="row">
             <div class="col"> <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 30px; margin-top: 7px; margin-left: 15px;"></div>
             <div class="col" style="margin-right: 150px"> <p>Technopolis </p>
