--- a/CovGI/www/templates/modal.html
+++ b/CovGI/www/templates/modal.html
@@ -23,7 +23,20 @@
             <div class="col" style="margin-right: 150px"><p> Nombre de places disponibles : {{nbrPlaceOffre}}</p></div>
         </div>
 
-        <button class="button button-dark button-block" ng-click="modal.hide()">S'inscrire pour cette offre</button>
+
+        <div class="row">
+            <div class="col"><ion-icon class="icon ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></ion-icon></div>
+            <div class="col" style="margin-right: 150px"><p>Vehicule : {{UserOffer.vehicule}}</p></div>
+        </div>
+        <div class="row">
+            <div class="col"><ion-icon class="icon ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></ion-icon></div>
+            <div class="col" style="margin-right: 150px"><p>N° Immatriculation : {{UserOffer.matricule}}</p></div>
+        </div>
+        <div class="row">
+            <div class="col"><i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i></div>
+            <div class="col" style="margin-right: 150px"><p> Pour s'inscrire cliquer sur la carte pour sélectionner votre point d'arrêt</p></div>
+        </div>
+        <button class="button button-dark button-block" ng-click="inscriptionOffer()">S'inscrire pour cette offre</button>
         <button class="button button-dark button-block" ng-click="modal.hide()">Retour</button>
 
     </ion-content>
